--- a/container-files/etc/supervisor/conf.d/supervisord.conf
+++ b/container-files/etc/supervisor/conf.d/supervisord.conf
@@ -14,3 +14,6 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
+
+[include]
+files = /etc/supervisor/additional-conf.d/*.conf
