TASK: Rebase to ubuntu

--- a/container-files/etc/supervisor/conf.d/supervisord.conf
+++ b/container-files/etc/supervisor/conf.d/supervisord.conf
@@ -2,13 +2,13 @@
 nodaemon=true
 
 [program:php-fpm]
-command=php-fpm7 -F --fpm-config /etc/php-fpm.conf
+command=php-fpm7.0  -F --fpm-config /etc/php-fpm.conf
 autorestart = true
 stdout_logfile = /data/logs/php-fpm.log
 stderr_logfile = /data/logs/php-fpm.log
 
 [program:nginx]
-command=nginx -g 'daemon off;'
+command=nginx -g 'daemon off;' -c /etc/nginx/nginx.conf
 autorestart = true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
